# llm-regression-detector

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
examples/: golden_planner.yaml
src/lrd/: __init__.py  alerter.py  cli.py  config.py  golden.py  regression.py  runner.py
src/lrd/dashboard/: app.py  data.py  theme.py
src/lrd/scoring/: __init__.py  base.py  llm_judge.py  semantic_sim.py  structural.py
src/lrd/store/: duckdb_store.py
src/lrd/sut/: base.py  mlra_planner.py
tests/unit/: test_alerter.py  test_golden.py  test_regression.py  test_scoring.py  test_store.py
