[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lrd"
version = "0.1.0"
description = "LLM Regression Detector — CI/CD for LLM behavior."
requires-python = ">=3.9"
dependencies = [
    # LLM clients
    "groq>=0.11.0",
    "google-genai>=1.0",
    # Data + schema
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    # Storage
    "duckdb>=1.0",
    # Embeddings — using Gemini's embedding API (no local PyTorch dep)
    "numpy>=1.24",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
dashboard = [
    "streamlit>=1.36",
    "streamlit-option-menu>=0.4",
    "plotly>=5.20",
    "pandas>=2.0",
]

[project.scripts]
lrd = "lrd.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501 long lines OK (LLM prompts are long); B008 is Typer's required pattern.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
